<resources>
    <string name="app_name">SOSFall</string>
    <string name= "MaxText"> Máximo X: ${valores.getMaximoX().format(2)}\n
        Máximo Y: ${valores.getMaximoY().format(2)}\n
        Máximo Z: ${valores.getMaximoZ().format(2)}</string>
    <string name="regCaidas5">Registro últimas 5 caídas</string>
    <string name="warningImage">Warning image</string>
    <string name="callButton">Call Button</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="acc_x">Acc_x</string>
    <string name="acc_z">Acc_z</string>
    <string name="acc_y">Acc_y</string>
    <string name="registro_caidas">Registro caídas</string>
</resources>